# kfs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  grub.cfg  i386-unknown-none.json  i686-kfs.json  linker.ld  rust-toolchain.toml
.cargo/: config.toml
boot/: boot.S  boot.asm  grub.cfg
docs/: API.md  DEVELOPMENT.md  STRUCTURE.md
src/: boot.asm  gdt.rs  interrupts.rs  io.rs  keyboard.rs  kfs_lib.rs  kmain.rs  lib.rs  main.rs  panic.rs  power.rs  printk.rs  screen.rs  screens.rs  shell.rs  stack.rs  stack_trace.rs  vga.rs  vga_buffer.rs
src/arch/: mod.rs
src/arch/i386/: cpu.rs  gdt.rs  idt.rs  interrupts.rs  io.rs  memory.rs  mod.rs
src/arch/x86_64/: boot.s  idt.rs  mod.rs
src/drivers/: keyboard.rs  mod.rs  serial.rs  vga.rs  vga_buffer.rs
src/kernel/: memory.rs  mod.rs  panic.rs  printk.rs  process.rs  stack.rs
src/memory/: heap.rs  mod.rs  paging.rs  pmm.rs  vmm.rs
src/ui/: mod.rs  shell.rs
src/utils/: kfs_lib.rs  memory.rs  mod.rs
