[package]
name = "kfs"
version = "0.1.0"
edition = "2024"

[dependencies]

[lib]
name = "kfs"
path = "src/kmain.rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]