[package]
name = "kfs"
version = "0.1.0"
edition = "2024"

[lib]
name = "kfs"
path = "src/kmain.rs"
crate-type = ["staticlib"]
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
spin = "0.10.0"
