[package]
name = "kfs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kfs"
test = false
bench = false

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
cfg-if = "1.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Configuration pour no_std
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
